<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/cyan"
    tools:context=".Search_Result">

    <RelativeLayout
        android:id="@+id/RL_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_city_name"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_navigation"
            android:elevation="@dimen/_10sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_65sdp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/population"
            android:layout_gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/tn_font_blue" />

        <TextView
            android:id="@+id/city_pop_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_tot"
            android:layout_gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/tn_font_blue"
            android:layout_marginTop="@dimen/_25sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:layout_gravity="center"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:textColor="@color/hash_color"
            android:layout_marginTop="@dimen/_50sdp"/>

        <TextView
            android:id="@+id/city_today_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00000"
            android:layout_gravity="center"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_38sdp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_bar"
            android:alpha="0.8"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/city_today_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00000"
            android:layout_gravity="center"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:textColor="@color/green_color"
            android:layout_marginTop="@dimen/_70sdp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/bg_bar"
            android:alpha="0.8"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/city_today_dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00000"
            android:layout_gravity="center"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:textColor="@color/red_color"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_38sdp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_squ1"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_below="@+id/card_city_name"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tn"
            android:layout_gravity="center"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:layout_marginTop="@dimen/_10sdp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_squ2"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_below="@+id/card_squ1"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/india"
            android:layout_gravity="center"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:layout_marginTop="@dimen/_10sdp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_tested"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_toEndOf="@+id/card_city_name"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_13sdp"
            android:text="@string/tested_tn"
            android:textColor="@color/orange"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city_tested_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/tested_count"
            android:textColor="@color/orange"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_total"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_toEndOf="@+id/card_city_name"
        android:layout_below="@+id/card_tested"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_13sdp"
            android:text="@string/confirmed"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city_total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/count_tot"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_active"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_below="@+id/card_total"
        android:layout_toEndOf="@+id/card_city_name"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_13sdp"
            android:text="@string/active"
            android:textColor="@color/tn_font_blue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city_active_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/count_act"
            android:textColor="@color/tn_font_blue"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_recovo"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_below="@+id/card_active"
        android:layout_toEndOf="@+id/card_city_name"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_13sdp"
            android:text="@string/recovered"
            android:textColor="@color/green_color"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_virus_green"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_125sdp"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/city_recovo_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/count_rec"
            android:textColor="@color/green_color"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_dead"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_below="@+id/card_recovo"
        android:layout_toEndOf="@+id/card_city_name"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_13sdp"
            android:text="@string/dead"
            android:textColor="@color/red_color"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city_dead_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/count_dead"
            android:textColor="@color/red_color"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="@dimen/_220sdp"
            android:layout_height="wrap_content"
            android:text="@string/note_descri"
            android:textColor="@color/white"
            android:layout_below="@+id/card_squ2"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_centerHorizontal="true"
            android:alpha="0.75"/>

    </RelativeLayout>

</RelativeLayout>