<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RL0"
    android:background="@color/green_color"
    android:gravity="center"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_12sdp"
    tools:context=".Dos_and_donts_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/green_color"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_95sdp"
                android:src="@drawable/ic_rectangle_bg"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/hand_wash"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:src="@drawable/ic_hand_wash"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/hand_wash_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hand_wash"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_14sdp"/>

            <TextView
                android:id="@+id/hand_wash_cont"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:text="@string/hand_wash_cont"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                android:textColor="@color/hash_color"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_30sdp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/green_color"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_95sdp"
                android:src="@drawable/ic_rectangle_bg_reverse"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/mask"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_213sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:src="@drawable/ic_mask"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/txtv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_12sdp"/>

            <TextView
                android:id="@+id/mask_cont"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:text="@string/mask_cont"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                android:textColor="@color/hash_color"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/green_color"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_95sdp"
                android:src="@drawable/ic_rectangle_bg"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/doctor"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:src="@drawable/ic_doctor"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/doctor_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_14sdp"/>

            <TextView
                android:id="@+id/txtv2"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:text="@string/doctor_cont"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                android:textColor="@color/hash_color"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_30sdp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/green_color"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_95sdp"
                android:src="@drawable/ic_rectangle_bg_reverse"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/home"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_213sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:src="@drawable/ic_home"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stay_home"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_20sdp"/>

            <TextView
                android:id="@+id/home_cont"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:text="@string/stay_home_cont"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                android:textColor="@color/hash_color"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</RelativeLayout>